Add Elon image and set graidient

--- a/main.css
+++ b/main.css
@@ -1,9 +1,23 @@
-body{
+* {
     margin: 0;
+    padding: 0;
 }
 
 header {
     text-align: center;
-    background-color: #EDEDED;
-    padding: 10px 0px 40px;
+    
+    padding: 20px 0px 30px;
+}
+
+header h1 {
+    margin-bottom: 15px;
+}
+
+img {
+    display: block;
+    margin: 50px auto;
+}
+
+#intro {
+    background: linear-gradient(to bottom, rgba(115,115,115,1) 0%, rgba(171,171,171,0.9) 26%, rgba(255,255,255,0.6) 100%);
 }
