--- a/main.css
+++ b/main.css
@@ -1,23 +1,43 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 header {
     text-align: center;
-    
     padding: 20px 0px 30px;
 }
 
 header h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    color: #252740;
+    letter-spacing: 1px;
     margin-bottom: 15px;
+    animation: fadein 2s;
+}
+
+header q {
+    font-size: 32px;
+    animation: fadein 3s;
+    animation-timing-function: cubic-bezier(1, 0, 1, 1);
 }
 
 img {
     display: block;
-    margin: 50px auto;
+    margin: 30px auto;
 }
 
 #intro {
     background: linear-gradient(to bottom, rgba(115,115,115,1) 0%, rgba(171,171,171,0.9) 26%, rgba(255,255,255,0.6) 100%);
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to   { 
+        opacity: 1;
+    }
 }
